objects/QIDC__OK_Codes_Translation_ims__c.object
<CustomObject>
    <description>Used to store the Translations for OneKey Codes.</description>
    <fields>
        <fullName>QIDC__Country_UID_Code_ims__c</fullName>
        <externalId>true</externalId>
        <label>Country UID Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__ISO_Language_Code_ims__c</fullName>
        <label>ISO Language Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Label_ims__c</fullName>
        <label>Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QIDC__OK_Code_ims__c</fullName>
        <label>OneKey Code</label>
        <referenceTo>QIDC__OK_Code_ims__c</referenceTo>
        <relationshipLabel>OneKey Code Translations</relationshipLabel>
        <relationshipName>OneKey_Code_Translations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>OneKey Code Translation</label>
    <nameField>
        <label>OneKey Code Translation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OneKey Code Translations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>